Bug 136138 - set as album thumbnail doesn't change the icon immediately
Summary: set as album thumbnail doesn't change the icon immediately
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Thumbs-Album (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-10-22 17:22 UTC by david ross
Modified: 2017-07-29 05:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description david ross 2006-10-22 17:22:47 UTC
Version:           0.9.0-beta3 (using KDE KDE 3.5.5)
Installed from:    SuSE RPMs
OS:                Linux

when setting an albums thumbnail the thumbnail is not changed until Digikam is restarted.

digikam: WARNING: [bool Digikam::AlbumDB::execSql(const QString&, QStringList*, bool)] sqlite_compile error: no such column: T.icon on query: SELECT B.url, I.name
 FROM Albums AS A
   LEFT OUTER JOIN Images AS I ON I.id=T.icon
   LEFT OUTER JOIN Albums AS B ON B.id=I.dirid
 WHERE T.id=14;
Comment 1 Marcel Wiesweg 2006-10-22 21:40:41 UTC
SVN commit 598184 by mwiesweg:

Correct copy-and-paste mistake.
Oops, would have thought I had checked this twice.
Ok, it only affects changing the thumbnail.
Thanks for the report.

BUG: 136138


 M  +2 -2      albumdb.cpp  


--- trunk/extragear/graphics/digikam/digikam/albumdb.cpp #598183:598184
@@ -473,9 +473,9 @@
     QStringList values;
     execSql( QString("SELECT B.url, I.name \n "
                      "FROM Albums AS A \n "
-                     "  LEFT OUTER JOIN Images AS I ON I.id=T.icon \n "
+                     "  LEFT OUTER JOIN Images AS I ON I.id=A.icon \n "
                      "  LEFT OUTER JOIN Albums AS B ON B.id=I.dirid \n "
-                     "WHERE T.id=%1;")
+                     "WHERE A.id=%1;")
              .arg(albumID), &values );
     if (values.isEmpty())
         return QString();