Correct copy-and-paste mistake. Oops, would have thought I had checked this twice. Ok, it only affects changing the thumbnail. Thanks for the report.

BUG: 136138

svn path=/trunk/extragear/graphics/digikam/; revision=598184